# haskell-hangman

./: .gitignore  LICENSE  README.md  hangman.cabal  package.yaml
app/: Main.hs
res/: words.txt
src/: Hangman.hs  Main.hs  WordListsFromResources.hs
src/main/haskell/: Main.hs  Paths_hangman.hs
