Name:                hangman
Version:             1.0

Synopsis:            Hangman implementation in Haskell written in two hours.
Description:
  A command line implementation of the classic hangman game.
  I wrote this when I was desperately bored during exam revision period
  in a couple of hours.
  
  Hopefully you will find the implementation to be of use. It sort of began as
  an assessment of the Haskell development experience, but I plan to continue
  to maintain and extend the implementation to demonstrate how to apply good
  software development practises to Haskell code.

License:             MIT
License-file:        LICENSE
Author:              Hok Shun Poon <fushunpoon _ gmail _ com>
Maintainer:          Hok Shun Poon <fushunpoon _ gmail _ com>
Copyright:           (c) 2012 Hok Shun Poon
Category:            Game
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

Cabal-version:       >=1.2

Executable hangman
  -- Specify the source directory here
  Hs-source-dirs:      src

  -- .hs or .lhs file containing the Main module.
  Main-is:             Main.hs
  
  -- Packages needed in order to build this package.
  Build-depends:       base>4, mtl, random, utility-ht
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
